main/default/objects/Referral_Reason__c/fields/Approval_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required__c</fullName>
    <label>Approval Level Required</label>
    <length>20</length>
    <type>Text</type>
</CustomField>