main/default/objects/Referral_Reason__c/fields/Approval_Rejected_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Rejected_Date__c</fullName>
    <label>Approval/Rejected Date</label>
    <type>Date</type>
</CustomField>