main/default/objects/Referral_Reason__c/fields/Entity_Path__c.field-meta.xml
<CustomField>
    <fullName>Entity_Path__c</fullName>
    <label>Entity Path</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>