main/default/objects/Referral_Reason__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>