main/default/objects/Referral_Reason__c/fields/Is_Auto_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Approved</label>
    <type>Checkbox</type>
</CustomField>