main/default/objects/Referral_Reason__c/fields/Option_Id__c.field-meta.xml
<CustomField>
    <fullName>Option_Id__c</fullName>
    <label>Option Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>