main/default/objects/Referral_Reason__c/fields/Option_Limit__c.field-meta.xml
<CustomField>
    <fullName>Option_Limit__c</fullName>
    <formula>Quote_Option__r.Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>