main/default/objects/Referral_Reason__c/fields/Option_Type__c.field-meta.xml
<CustomField>
    <fullName>Option_Type__c</fullName>
    <formula>TEXT(Quote_Option__r.Option_Type__c)</formula>
    <label>Option Type</label>
    <type>Text</type>
</CustomField>