main/default/objects/Referral_Reason__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Referral Reasons</relationshipLabel>
    <relationshipName>Referral_Reasons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>