main/default/objects/Referral_Reason__c/fields/Quote_Option__c.field-meta.xml
<CustomField>
    <fullName>Quote_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Option</label>
    <referenceTo>Quote_Option__c</referenceTo>
    <relationshipLabel>Referral Reasons</relationshipLabel>
    <relationshipName>Referral_Reasons</relationshipName>
    <type>Lookup</type>
</CustomField>