main/default/objects/Referral_Reason__c/fields/Quote_Option_Limit__c.field-meta.xml
<CustomField>
    <fullName>Quote_Option_Limit__c</fullName>
    <description>#53190: Open field to fill the option limit</description>
    <label>Quote Option Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>