main/default/objects/Referral_Reason__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>