main/default/objects/Referral_Reason__c/fields/Reason_Type__c.field-meta.xml
<CustomField>
    <fullName>Reason_Type__c</fullName>
    <label>Reason Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refer</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>