main/default/objects/Referral_Reason__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Refer</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>