main/default/objects/Referral_Reason__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Level_Required__c</columns>
    <columns>Approver_Level__c</columns>
    <columns>Reason__c</columns>
    <columns>Status__c</columns>
    <columns>Reason_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>